force-app/main/default/objects/Account/fields/Has_Unpaid_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Has_Unpaid_Invoices__c</fullName>
    <formula>Unpaid_Invoices__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Unpaid Invoices</label>
    <type>Checkbox</type>
</CustomField>