force-app/main/default/objects/Account/fields/Total_Actual_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Paid__c</fullName>
    <description>The amount of money CSU OEE has received from this account.</description>
    <inlineHelpText>The amount of money CSU OEE has received from this account.</inlineHelpText>
    <label>Total Actual Paid</label>
    <summarizedField>Noncredit_Invoice__c.Actual_Paid__c</summarizedField>
    <summaryForeignKey>Noncredit_Invoice__c.Payer_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>