force-app/main/default/objects/Account/fields/Unpaid_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Invoices__c</fullName>
    <description>Number of unpaid invoices currently outstanding.</description>
    <inlineHelpText>Number of unpaid invoices currently outstanding.</inlineHelpText>
    <label>Unpaid Invoices</label>
    <summaryFilterItems>
        <field>Noncredit_Invoice__c.Is_Paid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Noncredit_Invoice__c.Payer_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>